<resources>
    <string name="location">Location:</string>
    <string name="hours">Hours Open:</string>
    <string name="contact">Contact Number:</string>
    <string name="app_name">TigerEats</string>
    <string name="tab_text_1">Tiger Eats</string>
    <string name="tab_text_2">Tiger Recipe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="american">American</string>
    <string name="americansub">This includes burger, bacon, and everything American.</string>
    <string name="chinese">Chinese</string>
    <string name="chinesesub">This includes dimsum treats like siomai and dumplings.</string>
    <string name="filipino">Filipino</string>
    <string name="filipinosub">This includes common Filipino foods like silog meals.</string>
    <string name="italian">Italian</string>
    <string name="italiansub">This includes pizza, pasta, and everything Italian.</string>
    <string name="japanese">Japanese</string>
    <string name="japanesesub">This includes ramen, sushi, tempura, and the like.</string>
    <string name="korean">Korean</string>
    <string name="koreansub">This includes bibimbap, samgyup, and everything Korean.</string>
    <string name="adobo">Chicken Adobo</string>
    <string name="adobosub">A popular Filipino dish of marinated meat.</string>
    <string name="omelet">Cheese Omelet</string>
    <string name="omeletsub">A simple dish made from beaten eggs - with a twist.</string>
    <string name="sinigang">Sinigang na Baboy</string>
    <string name="sinigangsub">A simple hot and sour soup with pork, veggies, and tamarind-flavored broth.</string>
    <string name="giniling">Pork Giniling</string>
    <string name="ginilingsub">A classic, easy to cook Filipino with a dash of potatotes.</string>
    <string name="tinola">Tinola</string>
    <string name="tinolasub">A well-known Filipino comfort food for Sundays at home.</string>
    <string name="army">Army Navy</string>
    <string name="wendys">Wendys</string>
    <string name="jackos">Jacko\'s Burger Bar</string>
    <string name="mcdo">Mcdonald\'s</string>
    <string name="wingvibe">Wing Vibe</string>
    <string name="angkong">Angkong</string>
    <string name="dimsum">Dimsum Treats</string>
    <string name="gc">Golden Chopstick</string>
    <string name="fastfoo">Mr. Fast Foo</string>
    <string name="chowking">Chowking</string>
    <string name="lovelite">Lovelite</string>
    <string name="tapaking">Tapa King</string>
    <string name="ricingstar">Ricing Star</string>
    <string name="goldilocks">Goldilocks</string>
    <string name="celys">Celys Canteen</string>
    <string name="yellowcab">Yellowcab</string>
    <string name="dominos">Dominos</string>
    <string name="shakeys">Shakeys</string>
    <string name="sbarro">Sbarro</string>
    <string name="pizzahut">Pizza Hut</string>
    <string name="hokusai">Hokusai</string>
    <string name="ichiro">Ichiro</string>
    <string name="toribox">Tori Box</string>
    <string name="legit">Legit Restaurant</string>
    <string name="tokyo">Tokyo Tokyo</string>
    <string name="samgyup">Samgyupsalamat</string>
    <string name="sarap">Samgyupsarap</string>
    <string name="santorini">Santorini</string>
    <string name="hanayo">Hanayo</string>
    <string name="bonchon">Bon Chon</string>
    <string name="locationArmy">Ground Floor, Pacific Icon Residences,  Dapitan St, Sampaloc, Manila, Metro Manila</string>
    <string name="hoursArmy">24 hours</string>
    <string name="contactArmy">(02) 333 3131</string>
    <string name="locationWendys">1427 Dapitan St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursWendys">24 hours</string>
    <string name="contactWendys">(02) 533 3333</string>
    <string name="locationJackos">1601 Piy Margal St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursJackos">Mondays to Sundays, 11:00 am - 11:30 pm</string>
    <string name="contactJackos">0917 550 9962</string>
    <string name="locationMcdo">850 Padre Noval St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursMcdo">24 hours</string>
    <string name="contactMcdo">(02) 568 6236</string>
    <string name="locationWingvibe">1222 Delos Reyes St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursWingvibe">Mondays to Saturdays, 9:00 am - 11:00 pm
                                    Sundays, 12:00 nn - 9:00 pm</string>
    <string name="contactWingvibe">0997 438 8950</string>
    <string name="locationCelys">1242 Concepcion St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursCelys">Mondays to Fridays, 10:00 am - 8:00 pm</string>
    <string name="contactCelys">None declared</string>
    <string name="locationLovelite">1224 Asturias St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursLovelite">Mondays to Saturdays, 8:00 am - 9:00 pm</string>
    <string name="contactLovelite">0927 334 3234</string>
    <string name="locationRicing">V. Concepcion St, Manila, 1008 Metro Manila</string>
    <string name="hoursRicing">24 hours</string>
    <string name="contactRicing">None declared</string>
    <string name="locationTapa">UST Multi Deck Parking, Espana St., Sampaloc, Manila</string>
    <string name="hoursTapa">Mondays to Saturdays, 8:00 am - 8:00 pm
                                Sundays, 11:00 am - 8:00 pm</string>
    <string name="contactTapa"> 938-1136</string>
    <string name="locationGoldilocks">Miracle III Building, 873 España Blvd, Sampaloc, Manila, 1015 Metro Manila</string>
    <string name="hoursGoldilocks">Mondays to Sundays, 7:00 am - 9:00 pm</string>
    <string name="contactGoldilocks">(02) 740 6454</string>
    <string name="locationDimsum">1217 Juaning St, Dapitan, Metro Manila</string>
    <string name="hoursDimsum">Mondays to Sundays, 8:00 am - 2:00 pm</string>
    <string name="contactDimsum">(02) 781-1557</string>
    <string name="locationAngkong">1241 Asturias St, Sampaloc, Manila, 1015 Metro Manila</string>
    <string name="hoursAngkong">Mondays to Saturdays, 10:00 am - 7:30 pm</string>
    <string name="contactAngkong">None declared</string>
    <string name="locationGolden">2nd flr, UST Multi-Deck Parking, UST Campus, Sampaloc, Manila</string>
    <string name="hoursGolden">Mondays to Fridays, 8:00 am - 6:00 pm
                                Saturdays, 9:00 am - 3:00 pm</string>
    <string name="contactGolden">None declared</string>
    <string name="locationFastfoo">UST Multi-Deck Parking, UST Campus, Sampaloc, Manila</string>
    <string name="hoursFastfoo">Mondays to Saturdays, 7:00 am - 10:00 pm
                                Sundays, 8:00 am - 9:00 pm</string>
    <string name="contactFastfoo">None declared</string>
    <string name="locationChowking">UST Multi-Deck Parking, UST Campus, Sampaloc, Manila</string>
    <string name="hoursChowking">24 hours</string>
    <string name="contactChowking">(02) 98888</string>
    <string name="locationHokusai">1222 Padre Noval St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursHokusai">Mondays to Sundays, 10:00 am - 9:00 pm</string>
    <string name="contactHokusai">None declared</string>
    <string name="locationTokyo">2nd flr, UST Multi-Deck Parking, UST Campus, Sampaloc, Manila</string>
    <string name="hoursTokyo">Mondays to Saturdays, 10:00 am - 9:00 pm</string>
    <string name="contactTokyo">(02) 708 4088</string>
    <string name="locationIchiro">P. Noval Street, Near UST Campus, Sampaloc, Manila</string>
    <string name="hoursIchiro">Mondays to Sundays, 8:00 am - 12:00 mn</string>
    <string name="contactIchiro">0906 403 3827</string>
    <string name="locationToribox"> iTower Building, 939 Padre Noval St, Sampaloc, Manila</string>
    <string name="hoursToribox">Mondays to Sundays, 9:00 am - 8:00 pm</string>
    <string name="contactToribox">None declared</string>
    <string name="locationLegit">981 Padre Noval St, 469 Zone 46, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursLegit">Mondays to Sundays, 9:00 am - 10:00 pm</string>
    <string name="contactLegit">(02) 267 2488</string>
    <string name="locationHanayo">945-955 Padre Noval St, 469 Zone 46, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursHanayo">Mondays to Sundays, 9:00 am - 9:00 pm</string>
    <string name="contactHanayo">(02) 710 0718</string>
    <string name="locationSantorini">1229 Delos Reyes St, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursSantorini">Mondays to Sundays, 9:00 am - 9:00 pm</string>
    <string name="contactSantorini">0915 524 1900</string>
    <string name="locationBonchon">2nd flr, UST Multi-Deck Parking, UST Campus, Sampaloc, Manila</string>
    <string name="hoursBonchon">Mondays to Sundays, 7:00 am - 10:30 pm</string>
    <string name="contactBonchon">((02) 633 1818</string>
    <string name="locationSamgyupsalamat">Unit 2G and 2H Fusebox Building, 1254-1258 Asturias St, Sampaloc, Manila, Metro Manila</string>
    <string name="hoursSamgyupsalamat">Mondays to Sundays, 11:00 am - 2:00 am</string>
    <string name="contactSamgyupsalamat">None declared</string>
    <string name="locationSamgyupsarap">840 Padre Noval St, Sampaloc, Manila, 1015 Metro Manila</string>
    <string name="hoursSamgyupsarap">Mondays to Sundays, 11:00 am - 2:00 am</string>
    <string name="contactSamgyupsarap">None declared</string>
    <string name="locationYellowcab">1122 Lacson Ave, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursYellowcab">24 hours</string>
    <string name="contactYellowcab">(02) 789 9999</string>
    <string name="locationShakeys">Rodriguez Building, España Blvd, Sampaloc, Manila, 1008 Metro Manila</string>
    <string name="hoursShakeys">24 hours</string>
    <string name="contactShakeys">(02) 77777</string>
    <string name="locationDominos">M.F. Jhocson, 873 España Blvd, Sampaloc, Manila, 1015 Metro Manila</string>
    <string name="hoursDominos">Mondays to Sundays, 10:00 am - 10:00 pm</string>
    <string name="contactDominos">(02) 997 3030</string>
    <string name="locationPizzahut">Celestial Marie BLDG, G/F, 820 A.H.Lacson St, Sampaloc, Manila, 1015 Metro Manila</string>
    <string name="hoursPizzahut">Mondays to Sundays, 10:00 am - 1:00 am</string>
    <string name="contactPizzahut">(02) 911 1111</string>
    <string name="locationSbarro">UST Multi-Deck Parking, UST Campus, Sampaloc, Manila</string>
    <string name="hoursSbarro">Mondays to Sundays, 9:00 am - 10:00 pm</string>
    <string name="contactSbarro">None declared</string>
    <string name="title">Hey Tiger!</string>
    <string name="subtitle">What do you want to eat today?</string>
    <string name="ingredients">Ingredients:</string>
    <string name="how">How to cook:</string>
    <string name="ingSinigang">
         500g pork, sinigang cut \n
        Water \n
        1 med. tomatoes, quartered \n
        1 sm. onion, quartered \n
        1 cup taro root, cubed \n
        3-4 tbsp. sinigang na gabi mix \n
        1 pc. siling haba \n
        1-2 tbsp. fish sauce \n
        1/2 cup sitaw \n
        2 cups kangkong \n
    </string>
    <string name="howSinigang">
         1. Place the tomatoes, pork, and onions in a pot with enough water to cover pork, bring to a boil then lower heat to simmer for 1 1/2 hours until pork is tender. \n
        2. Skin top from time to time to get rid of impurities. \n
        3. After 30 mins. of cooking pork, add gabi cubes. \n
        4. Once pork is tender, add sinigang mix, siling haba, and simmer for 5 mins. \n
        5. Add the sitaw then simmer for another 5 mins. \n
        6. Season to taste with patis then add kangkong leaves and simmer for 2-3 mins. Adjust seasoning according to taste. Serve while hot.
    </string>
</resources>