<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffff"
    >


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="551dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/americanIcon"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/american" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnAmerican"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/gotham"
                        android:onClick="American"
                        android:text="@string/american"
                        android:textAllCaps="false"
                        android:textColor="#FBC70A"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/americanSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:gravity="center"
                        android:text="@string/americansub"
                        android:textColor="#312929"
                        android:textSize="13sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/chineseIcon"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/chinese" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnChinese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/gotham"
                        android:onClick="Chinese"
                        android:text="@string/chinese"
                        android:textAllCaps="false"
                        android:textColor="#FBC70A"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/chineseSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:gravity="center"
                        android:text="@string/chinesesub"
                        android:textColor="#312929"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/filipinoIcon"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/filipino" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnFilipino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/gotham"
                        android:onClick="Filipino"
                        android:text="@string/filipino"
                        android:textAllCaps="false"
                        android:textColor="#FBC70A"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/filipinoSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:gravity="center"
                        android:text="@string/filipinosub"
                        android:textColor="#312929"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/italianIcon"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/italian" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnItalian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/gotham"
                        android:onClick="Italian"
                        android:text="@string/italian"
                        android:textAllCaps="false"
                        android:textColor="#FBC70A"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/italianSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:gravity="center"
                        android:text="@string/italiansub"
                        android:textColor="#312929"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/japaneseIcon"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/japanese" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnJapanese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/gotham"
                        android:onClick="Japanese"
                        android:text="@string/japanese"
                        android:textAllCaps="false"
                        android:textColor="#FBC70A"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/japaneseSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:gravity="center"
                        android:text="@string/japanesesub"
                        android:textColor="#312929"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/koreanIcon"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/korean" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnKorean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:fontFamily="@font/gotham"
                        android:onClick="Korean"
                        android:text="@string/korean"
                        android:textAllCaps="false"
                        android:textColor="#FBC70A"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/koreanSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratmedium"
                        android:gravity="center"
                        android:text="@string/koreansub"
                        android:textColor="#312929"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>